GNOME Bugzilla – Bug 743966
Soup.form_decode crashes gjs in free()
Last modified: 2016-01-15 23:39:03 UTC
I tried to use Soup.form_decode() but it's crashing. // test.js var Soup = imports.gi.Soup; Soup.form_decode("a=b"); then from command line do: gjs test.js
Created attachment 319160 [details] [review] soup_form_decode*: fix transfer annotation The correct transfer annotation to use here is container, as unreffing the GHashTable will free its items.
Review of attachment 319160 [details] [review]: OK.
Review of attachment 319160 [details] [review]: Pushed to master.