soup_form_decode*: fix transfer annotation

The correct transfer annotation to use here is container, as unreffing the
GHashTable will free its items.

https://bugzilla.gnome.org/show_bug.cgi?id=743966